// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ContentAnalysis component with language notice for someone who can change the language matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <p
    className="sc-jzJRlG hFCzcu"
  >
    <span>
      Your site language is set to 
      <strong>
        English
      </strong>
      .
    </span>
    <a
      className="sc-cSHVUG fzxnjC"
      href="#"
      rel="noopener noreferrer"
      target="_blank"
    >
      Change language
      <span
        className="sc-bdVaJa hrXKaN"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-hORach OLRDT"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-bMVAic jcxaXm sc-bAeIUo OCPyg"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-iujRgT hGVxGx"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-GMQeP ldbuOi"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-exAgwC fbAKfg sc-cQFLBn gEOLnQ"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-gojNiO llMUpo"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-daURTG gauaMH"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-bXGyLb gHhYoN"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-lkqHmb lmawnj sc-eLExRp dHJRpL"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-cbkKFq hBJSIp"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-krvtoX cqVZcp sc-fYiAbW cPGLFG"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-fOKMvo cRxfUc"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-dUjcNx iozELP sc-gHboQg jmeBrQ"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component with language notice for someone who cannot change the language matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <p
    className="sc-jzJRlG hFCzcu"
  >
    <span>
      Your site language is set to 
      <strong>
        English
      </strong>
      .
    </span>
    <a
      className="sc-cSHVUG fzxnjC"
      href="#"
      rel="noopener noreferrer"
      target="_blank"
    >
      Change language
      <span
        className="sc-bdVaJa hrXKaN"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </p>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-eilVRo wwieO"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-eerKOB gVcKdx sc-emmjRN hdhmSr"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-cpmLhU lgajHq"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-dymIpo kxnavc"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-bnXvFD kHQHgx sc-gFaPwZ fSTGVg"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-fhYwyz bpDFdS"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-jzgbtB iHUVFa"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-gJWqzi ADeBK"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-rBLzX dqeGvY sc-bMvGRv dnMihS"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-CtfFt cLjVaM"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-laTMn kDcors sc-hGoxap doIZZl"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-fjmCvl bGeQur"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-TFwJa ekkrZv sc-bHwgHz kwDcSm"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component with language notice matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <p
    className="sc-jzJRlG hFCzcu"
  >
    <span>
      Your site language is set to 
      <strong>
        English
      </strong>
      . If this is not correct, contact your site administrator.
    </span>
  </p>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-RefOD jWfKiF"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-iQKALj qURpL sc-bwCtUz dFdpYU"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-hrWEMg fqHZyB"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-eTuwsz MXQEn"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-gwVKww ihApjs sc-hXRMBi dXdfhR"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-epnACN iRJTXy"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-iQNlJl fBcMVf"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-bsbRJL bbIsTX"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-hZSUBg eyDFyj sc-cMhqgX fEukab"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-iuJeZd jcogYe"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-esOvli byqNXa sc-cmthru kmLrvf"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-hMFtBS ffpcQs"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-cLQEGU xIBNK sc-gqPbQI fwPiim"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component with specified header level matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h3
      className="sc-btzYZH eikXxG"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-lhVmIH guTWB sc-bYSBpT ineXey"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h3>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-elJkPf eFRZPo"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h3
      className="sc-jtRfpW bpweXu"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-kTUwUJ iOblgL sc-dqBHgY hnYiDQ"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Problems (1)
        </span>
      </button>
    </h3>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-gxMtzJ kzlsdu"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-dfVpRl hmferr"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h3
      className="sc-gzOgki lhoBbt"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-iyvyFf fGKCic sc-hwwEjo kWQDMK"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h3>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h3
      className="sc-kPVwWT cFySkN"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-kfGgVZ jApNfA sc-esjQYD hCjWch"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h3>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h3
      className="sc-kIPQKe bvUIet"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-eXEjpC ixlTwo sc-ibxdXY hiTLto"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h3>
  </div>
</div>
`;

exports[`the ContentAnalysis component without language notice matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-kAzzGY cJSrb"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-chPdSV hbfLss sc-kgoBCf ePqMlV"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-kGXeez dycyvO"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-kpOJdX iIoguF"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-dxgOiQ kJTTdB sc-ckVGcZ kpGfBi"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Problems (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-jKJlTe iWijFp"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Your text is bad, and you should feel bad.",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="1"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-eNQAEJ hrsyaF"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-hMqMXs ecLisl"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-kEYyzF jvMdMW sc-kkGfuU hUQWkd"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-iAyFgw hdFflt"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-hSdWYo kTOVeH sc-eHgmQL gJqaLD"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-cvbbAY gpNEXt"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-jWBwVP fFdKzu sc-brqgnP bdBJhJ"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component without problems and considerations, but with improvements and good matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-jnlKLf dwcFdz"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-fYxtnH dWJhlK sc-tilXH cUipo"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-hEsumM dDxnjc"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-ktHwxA kwVyUP"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-cIShpX dZImDM sc-kafWEX NavXf"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-feJyhm gpPjzH"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-iELTvK bRLeEc"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-cmTdod dBuLDh sc-jwKygS jqeVdP"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component without problems and improvements matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-dVhcbM jqYANl"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-eqIVtm eWdMXk sc-fAjcbJ dLmCwH"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-caSCKo ctNgHC"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-gisBJw gjHRrX"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-kjoXOD bCoNvk sc-cHGsZl eAbXNr"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-TOsTZ gcTxEf"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Maybe you should change this...",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-kgAjT lcGLGs"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-cJSrbW eBuJTp sc-ksYbfQ eqynDy"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component without problems matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-cMljjf jlRxCV"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-jAaTju ddypFD sc-jDwBTQ eRTBth"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-gPEVay jQuIte"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-iRbamj hvszbL"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-jlyJG ftIqAq sc-gipzik cQeibe"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Improvements (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-csuQGl kHQimb"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "I know you can do better! You can do it!",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-Rmtcm dQDeeG"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-bRBYWo dyJwhM sc-hzDkRC byqlUn"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Considerations (1)
        </span>
      </button>
    </h4>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-jhAzac cjWkYk"
    >
      <button
        aria-expanded={false}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-fBuWsC dWMVtt sc-fMiknA iIXRFC"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
  </div>
</div>
`;

exports[`the ContentAnalysis component without problems, improvements and considerations matches the snapshot 1`] = `
<div
  className="sc-fjdhpX dMpTuU"
>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-hmzhuo kkWdCp"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-frDJqD jzKItk sc-kvZOFW fpfEqG"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Errors (1)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-hqyNC cnKfFn"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Error: Analysis not loaded",
            }
          }
        />
      </li>
    </ul>
  </div>
  <div
    className="sc-gZMcBi klyNBW"
  >
    <h4
      className="sc-jbKcbu hLiNKd"
    >
      <button
        aria-expanded={true}
        className="sc-gqjmRU hBRzYx sc-iwsKbI ljgvpn sc-dnqmqq fzLqCC sc-htoDjs dFKnSN sc-gzVnrw jzmimO sc-bZQynM iYyoWB sc-EHOje cUKXHE"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="sc-dNLxif kUbxNa sc-jqCOkK dGBerj"
          focusable="false"
          role="img"
        />
        <span
          className="sc-VigVT bGMrIs"
        >
          Good (2)
        </span>
      </button>
    </h4>
    <ul
      className="sc-jTzLTM fYcrfm"
      role="list"
    >
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-uJMKN egVXao"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "You're doing great!",
            }
          }
        />
      </li>
      <li
        className="sc-htpNat hLKTNr"
      >
        <svg
          aria-hidden="true"
          className="sc-bxivhb gapdhR sc-bbmXgH jGUzVb"
          focusable="false"
          role="img"
        />
        <p
          className="sc-ifAKCX jLpTt"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Woohoo!",
            }
          }
        />
        <button
          aria-label="Highlight this result in the text"
          aria-pressed={false}
          className="sc-bwzfXH iSOXYD"
          id="3"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-gGBfsJ lpdIkP"
            focusable="false"
            role="img"
          />
        </button>
      </li>
    </ul>
  </div>
</div>
`;
